--- a/style.css
+++ b/style.css
@@ -1,4 +1,540 @@
 body {
-  background: red;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.header {
+  height: 85px;
+  background: #131313;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.header__logo_text_h1 {
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #E3B873;
+}
+
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 581px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.header__nav_element {
+  font-family: FuturaBookC, 'Lucida Sans', Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  color: #FFFFFF;
+}
+
+.header__nav_element:hover {
+  cursor: pointer;
+  color: #E3B873;
+}
+
+.header__tel a {
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: right;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #E3B873;
+}
+
+.header__but button {
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #E3B873;
+  -webkit-box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+          box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+  border-radius: 2px;
+  border: 0;
+  height: 37px;
+  width: 167px;
+}
+
+.header__but button:hover {
+  cursor: pointer;
+}
+
+.header__but button:active {
+  color: black;
+  background: gray;
+}
+
+.main {
+  width: 100%;
+  height: 707px;
+  background: #131313;
+}
+
+.main__section1 {
+  position: relative;
+  width: 100%;
+  height: 707px;
+}
+
+.main__section1_bg_photo-black {
+  width: 100%;
+  height: 707px;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.main__section1_instagram a {
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 82px;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  color: #E3B873;
+  height: 82px;
+  width: 707px;
+  left: -313px;
+  position: absolute;
+  top: 273px;
+  text-decoration: none;
+}
+
+.main__section1_instagram a::after {
+  background-color: #E3B873;
+  content: "";
+  display: inline-block;
+  height: 1.5px;
+  vertical-align: middle;
+  width: 45px;
+  margin-left: 15px;
+}
+
+.main__section1_bg_photo {
+  background: url("assets/images/bg_section1.png");
+  width: calc(100% - 84px);
+  height: 707px;
+  margin-left: 84px;
+}
+
+.section1_text-big {
+  padding: 196px 0 0 61px;
+  width: 676px;
+  font-family: Yeseva One, Georgia, 'Times New Roman', Times, serif;
+  font-size: 40px;
+  line-height: 53.13px;
+  line-height: 115%;
+  text-align: left;
+  vertical-align: top;
+  text-transform: uppercase;
+}
+
+.section1_text-big-white {
+  color: white;
+}
+
+.section1_text-big-gold {
+  color: #E3B873;
+}
+
+.section1_text-small {
+  font-family: FuturaBookC, 'Lucida Sans', Verdana, sans-serif;
+  font-size: 16px;
+  text-align: left;
+  vertical-align: top;
+  color: #FFFFFF;
+  width: 676px;
+  padding: 19px 0 0 61px;
+  line-height: 1.8;
+}
+
+.section1_button {
+  padding-left: 61px;
+  padding-top: 41px;
+}
+
+.section1_button-first {
+  background: #E3B873;
+  border-radius: 2px;
+  width: 207px;
+  height: 51px;
+  font-size: 13px;
+  line-height: 15px;
+  color: #FFFFFF;
+  text-align: center;
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  border: 0;
+  margin-right: 20px;
+}
+
+.section1_button-first:hover {
+  cursor: pointer;
+}
+
+.section1_button-first:active {
+  color: black;
+  background: gray;
+}
+
+.section1_button-second {
+  background: rgba(0, 0, 0, 0);
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  border-radius: 2px;
+  width: 207px;
+  height: 51px;
+  font-family: FuturaDemiC, Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 15px;
+  text-align: center;
+}
+
+.section1_button-second:hover {
+  cursor: pointer;
+}
+
+.section1_button-second:active {
+  color: #131313;
+  background: #E3B873;
+}
+
+.scroll {
+  bottom: -48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  background: #131313;
+  width: 247px;
+  height: 97px;
+  font-family: Yeseva One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.scroll a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.scroll img {
+  padding-left: 12px;
+}
+
+.main__section2 {
+  width: 100%;
+  height: 1074px;
+  background: #131313;
+  background-image: url("assets/images/whiteline.png");
+  overflow: hidden;
+}
+
+.main__section2_text {
+  width: 442px;
+}
+
+.main__section2_text-gold {
+  width: 253px;
+  font-family: Yeseva One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 37px;
+  letter-spacing: -0.07em;
+  text-transform: uppercase;
+  color: #E3B873;
+  padding: 176px 0 0 101px;
+}
+
+.main__section2_text-gold:after {
+  background-color: #E3B873;
+  content: "";
+  display: inline-block;
+  height: 1.5px;
+  vertical-align: middle;
+  width: 87px;
+  margin-left: 52px;
+}
+
+.main__section2_text-small {
+  font-family: FuturaBookC;
+  font-size: 18px;
+  line-height: 29px;
+  color: #FFFFFF;
+  padding: 34px 0 0 101px;
+  width: 442px;
+}
+
+.main__section2_text-gold_small {
+  font-family: Yeseva One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: #E3B873;
+  padding: 42px 0 0 101px;
+  width: 165px;
+}
+
+.main__section2-padding {
+  padding-top: 62px;
+}
+
+.main__section2_text-white_small {
+  font-family: FuturaBookC;
+  font-size: 15px;
+  line-height: 20px;
+  color: #FFFFFF;
+  width: 120px;
+  padding: 9px 0 0 101px;
+}
+
+.main_section2_flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main__section2_circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: gray;
+}
+
+.main__section2_circle:hover {
+  background: white;
+  cursor: pointer;
+}
+
+.main__section2_slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 206px;
+  height: 13px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 80px 0 0 101px;
+}
+
+.main__section2_slider img:hover {
+  cursor: pointer;
+}
+
+.main_section2_circles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 64px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main__section2_nav {
+  position: relative;
+  left: 593px;
+  bottom: 566px;
+  height: 24px;
+  width: 623px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: gray;
+}
+
+.main__section2_nav div:first-child {
+  color: #E3B873;
+}
+
+.main__section2_nav div:hover {
+  color: #E3B873;
+  cursor: pointer;
+}
+
+.main__section2_img {
+  position: relative;
+  left: 593px;
+  bottom: 521px;
+}
+
+.main__section2_img [alt=room] {
+  padding-right: 21px;
+}
+
+.main__section2_img-circle {
+  position: absolute;
+  left: 750px;
+  top: 206px;
+  background: #E3B873;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 80px;
+}
+
+.main__section2_img-circle:hover {
+  cursor: pointer;
+  background: green;
+}
+
+.main_section3-text {
+  font-family: Yeseva One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  margin-top: -323px;
+}
+
+.main_section3-img {
+  margin-top: 13px;
+}
+
+.main_section3-img:after, .main_section3-img:before {
+  content: "";
+  background-color: #E3B873;
+  display: inline-block;
+  height: 1.5px;
+  vertical-align: middle;
+  width: 32px;
+  margin: 0 8px;
+}
+
+.main_section3-youtube {
+  margin-top: 31px;
+  margin-left: 311px;
+}
+
+.main__section4 {
+  position: relative;
+  margin-top: -268px;
+  width: 100%;
+  height: 2663px;
+  background: url(assets/images/bg4.png);
+}
+
+.main__section4-text {
+  font-family: FuturaBookC;
+  font-size: 20px;
+  line-height: 34px;
+  text-align: center;
+  color: #363636;
+  width: 681px;
+  padding-top: 372px;
+  margin: auto;
+}
+
+.main__section4_line {
+  position: absolute;
+  top: 336px;
+  left: 47%;
+}
+
+.main__section4_line::after {
+  content: "";
+  background-color: #E3B873;
+  display: inline-block;
+  height: 2px;
+  vertical-align: middle;
+  width: 55px;
+}
+
+.main__section4_form-text {
+  font-family: FuturaBookC;
+  font-size: 15px;
+  line-height: 20px;
+  color: rgba(54, 54, 54, 0.5);
+}
+
+.main__section4_form input {
+  font-family: FuturaBookC;
+  font-size: 18px;
+  line-height: 24px;
+  color: #363636;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1 solid black;
+  background: none;
+}
+
+.main__section4_form input[type=submit] {
+  background: #E3B873;
+  border-radius: 2px;
+  border: 0;
+  font-family: FuturaDemiC;
+  font-size: 15px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  height: 51px;
+  width: 200px;
+}
+
+.main__section4_form input[type=submit]:hover {
+  cursor: pointer;
+}
+
+.main__section4_form-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 91px auto 0;
+  width: 770px;
+}
+
+.main__section4_checkbox-text {
+  font-family: FuturaBookC;
+  font-size: 16px;
+  line-height: 22px;
+  color: #181818;
+  margin: 33px auto 0;
+  width: 286px;
+  height: 18px;
+}
+
+.main__section4_checkbox-text input[type="checkbox"] {
+  margin-right: 5px;
 }
 /*# sourceMappingURL=style.css.map */
